# tyleros

./: .gitignore  CMakeLists.txt  TODO  bochsrc.txt  build.py  build.sh  gcc_cross_compiler.patch  test.sh
inc/kernel/: idt.h  kernel.h
notes/: system-v-abi
src/: CMakeLists.txt  boot1.asm  boot2.asm  kernel.ld  make-boot-img.py  start.asm
src/boot/: CMakeLists.txt  a20.asm  allocator.asm  boot.ld  boot1.asm  boot2.asm  compute_crc32.c  compute_crc32.cpp  elf_loader.asm  fat.asm  make_boot_img.py  memory_map.asm  paging.asm  printing.asm  read_floppy.asm  stage1.asm  stage1.ld  stage2.asm  stage2.ld  utils.asm
src/kernel/: CMakeLists.txt  acpi.cpp  acpi.h  alloc.cpp  alloc.h  atexit.cpp  atomic.h  cmos.cpp  cmos.h  crc32.asm  crc32.c  crc32.cpp  debug.cpp  debug.h  dma.cpp  dma.h  dwarf.cpp  dwarf.h  elf.cpp  elf.h  filesystem.cpp  filesystem.h  floppy.cpp  floppy.h  gdt.cpp  gdt.h  idt.cpp  idt.h  input.cpp  input.h  interrupts.cpp  interrupts.h  kernel.cpp  kernel.h  kernel.ld  low_memory_allocator.cpp  low_memory_allocator.h  main.cpp  main.h  memory.cpp  (+32 more)
src/kernel/adt/: intrusive_bitmap.h  optional.h  ring_buffer.h  small_string.h  stack_string.h
src/kernel/util/: algorithm.h  allocator.h  cast.h  io.h  list.h  new.cpp  new.h  type_traits.h  unique_ptr.h
src/libadt/: CMakeLists.txt  array.h  buffer.h  hash_map.h  intrusive_bitmap.h  optional.h  range.h  ring_buffer.h  small_string.h  stack_string.h  unique_ptr.h
src/libc/: CMakeLists.txt  assert.cpp  assert.h  ctype.cpp  ctype.h  errno.cpp  errno.h  platform_specific.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  unistd.h
src/libc/sys/: types.h
tests/: CMakeLists.txt  driver.cpp  test_optional.cpp  test_ring_buffer.cpp  test_string.cpp  utils.h
toolchain/: x86_64.cmake
